# bioloid_typea_gazebo

./: CMakeLists.txt  package.xml
launch/: gazebo.launch  gazebo.launch~  rviz.launch  rviz.launch~
scripts/: walker.py  walker.py~  walker_demo.py  walker_demo.py~
src/typea_gazebo/: typea.py  typea.py~
